position: relative on header – stop search box being hidden by ad

--- a/busstops/static/css/_base.scss
+++ b/busstops/static/css/_base.scss
@@ -123,6 +123,7 @@ summary {
 header {
     background: $brand-color;
     overflow: hidden;
+    position: relative;
 
     a {
         color: $black;
